Agregado HomeCache, ServicioCache y CacheManager. Hay que revisar CacheManager ya que quise hacer algo parecido al SessionManager, pero nose si lo hice bien. Tambien agregado al pom las dependencias de cassandra y el framework kundera. Agregado el archivo persistence.xml

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,24 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.10.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra-thrift</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.cassandra</groupId>
+			<artifactId>cassandra-clientutil</artifactId>
+			<version>2.2.3</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>com.impetus.kundera.client</groupId>
+            <artifactId>kundera-cassandra</artifactId>
+            <version>3.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
