--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
       		<artifactId>cassandra-driver-core</artifactId>
       		<version>2.0.0</version>
     	</dependency>
+    	
+    	<dependency>
+			<groupId>com.impetus.client</groupId>
+			<artifactId>kundera-cassandra</artifactId>
+			<version>2.9</version>
+		</dependency>
+    	
 	</dependencies>
 
 	<build>
