--- a/pom.xml
+++ b/pom.xml
@@ -88,29 +88,16 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.cassandra</groupId>
-			<artifactId>cassandra-thrift</artifactId>
-			<version>2.2.3</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.cassandra</groupId>
-			<artifactId>cassandra-clientutil</artifactId>
-			<version>2.2.3</version>
-		</dependency>
-		
-		<dependency>
       		<groupId>com.datastax.cassandra</groupId>
       		<artifactId>cassandra-driver-core</artifactId>
-      		<version>2.0.0</version>
+      		<version>2.1.6</version>
     	</dependency>
     	
     	<dependency>
-			<groupId>com.impetus.client</groupId>
-			<artifactId>kundera-cassandra</artifactId>
-			<version>2.9</version>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-mapping</artifactId>
+			<version>2.1.6</version>
 		</dependency>
-    	
 	</dependencies>
 
 	<build>
